change category to add_category

--- a/myBlog/templates/base.html
+++ b/myBlog/templates/base.html
@@ -19,7 +19,7 @@
           <a class="nav-link" href="{% url 'add_post' %}">add post</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'category' %}">add category</a>
+          <a class="nav-link" href="{% url 'add_category' %}">add category</a>
         </li>
       </ul>
     </div>
