implemeted categories filtring

--- a/myBlog/templates/home.html
+++ b/myBlog/templates/home.html
@@ -16,7 +16,8 @@
 
         <a href="{% url 'article_detail' post.pk %}">
         {{post.title}}</a>
-        - {{post.author}} -{{post.date}}-{{post.category}}<br>
+        <a href="{% url 'category' post.category %}">{{post.category}}</a>
+        - {{post.author}} -{{post.date}}<br>
         {{post.text}}
     </li>
     {% endfor %}
