--- a/myBlog/templates/home.html
+++ b/myBlog/templates/home.html
@@ -10,14 +10,14 @@
 
 <h1>Hello user</h1>
 
-<ul>
+<ul class="display-6 list-group ">
     {% for post in object_list %}
-    <li class="fst-italic">
+    <li class="list-group-item bg-primary mb-3" >
 
-        <a href="{% url 'article_detail' post.pk %}">
+        <a class="text-light" href="{% url 'article_detail' post.pk %}">
         {{post.title}}</a>
-        <a href="{% url 'category' post.category %}">{{post.category}}</a>
-        - {{post.author}} -{{post.date}}<br>
+        <a class="text-light"href="{% url 'category' post.category %}">{{post.category}}</a>
+        - {{post.author}} -{{post.date}}
         {{post.text}}
     </li>
     {% endfor %}
